# rzstd

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  deny.toml  flake.nix  rust-toolchain.toml  rzstd.nix
crates/rzstd/: Cargo.toml
crates/rzstd_cli/: Cargo.toml
crates/rzstd_cli/src/: main.rs
crates/rzstd_decompress/: Cargo.toml
crates/rzstd_decompress/benches/: decode_bench.rs
crates/rzstd_decompress/benches/silesia_corpus/: dickens.zst  mr.zst  nci.zst  ooffice.zst  osdb.zst  reymont.zst  xml.zst
crates/rzstd_decompress/src/: block.rs  context.rs  decoder.rs  errors.rs  frame.rs  lib.rs  literals_section.rs  prelude.rs  sequence_execution.rs  sequences_section.rs  window.rs
crates/rzstd_foundation/: Cargo.toml
crates/rzstd_foundation/src/: const_assert.rs  lib.rs
crates/rzstd_fse/: Cargo.toml
crates/rzstd_fse/src/: decode.rs  errors.rs
crates/rzstd_huff0/: Cargo.toml
crates/rzstd_huff0/src/: decode.rs  errors.rs  lib.rs
crates/rzstd_io/: Cargo.toml
crates/rzstd_io/src/: bit_reader.rs  lib.rs  reader.rs  reverse_bit_reader.rs
docs/: .latexmkrc  bibliography.bib  justfile  main.tex  paper.tex  presentation.tex
docs/assets/: 4-2-lst-exhaustive-pattern-matching.m  4-2-lst-invariant-enforcement-mechanisms.m  4-3-lst-norm-dist-verification.m  4-4-lst-window-copy-within.m  throughput.csv
docs/chapters/: 0-abstract.tex  1-introduction.tex  2-background.tex  3-requirements-and-specification.tex  4-design-and-architecture.tex  5-implementation.tex  6-results-and-evaluation.tex  7-conclusions-and-discussion-future-work.tex
docs/paper/: 0-abstract.tex  1-introduction.tex  2-state-of-the-art.tex  3-algorithm.tex  4-implementation.tex  5-experiments.tex  6-conclusions-and-future-work.tex
docs/presentation/: 01-model-entropy.tex  02-zstd-model.tex  03-structural-repetition.tex  04-literals-section.tex  05-fse.tex  06-sequences-section.tex  07-sequences-execution.tex  08-periodic-signals.tex  09-experiments.tex
nix/: latex.nix  rust.nix  rzstd.nix
