[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["Rizescu Iulian-Ştefan <iulian.stefan.rizescu@gmail.com>"]
rust-version = "1.90"
license = "MIT"
repository = "https://github.com/rizesql/rzstd"
readme = "README.md"

[workspace.dependencies]

[profile.dist]
inherits = "release"
lto = "thin"
