[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
authors = ["Rizescu Iulian-Ştefan <iulian.stefan.rizescu@gmail.com>"]
license = "MIT"
repository = "https://github.com/rizesql/rzstd"
description = ""

edition = "2024"

[workspace.lints.clippy]
pedantic = {level = "deny", priority = -1}
nursery = {level = "deny", priority = -1}
unwrap_used = "deny"

[workspace.dependencies]
rzstd_cli = { version = "0.0.1", path="crates/rzstd_cli" }
rzstd_decompress = { version = "0.0.1", path="crates/rzstd_decompress" }
rzstd_foundation = { version = "0.0.1", path="crates/rzstd_foundation" }
rzstd_fse = { version = "0.0.1", path="crates/rzstd_fse" }
rzstd_huff0 = { version = "0.0.1", path="crates/rzstd_huff0" }
rzstd_io = { version = "0.0.1", path="crates/rzstd_io" }

clap = { version = "4.5.1", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
proptest = "1.9.0"
thiserror = "2.0.17"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
debug = false
panic = "abort"

[profile.dev]
opt-level = 1
debug = 1

[profile.dev.package."*"]
opt-level = 3

[profile.test]
inherits = "dev"
opt-level = 2

[profile.bench]
inherits = "release"
debug = true
strip = "none"
codegen-opts = ["-C", "target-cpu=native"]
