[package]
name = "rzstd_cli"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
include = ["/src"]
license.workspace = true
publish = false
repository.workspace = true
description.workspace = true

[[bin]]
name = "rzstd"
path = "src/main.rs"

[dependencies]
rzstd_decompress.workspace = true

clap.workspace = true
miette = { workspace = true, features = ["fancy"] }
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
