[package]
name = "rzstd_decompress"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
include = ["/src"]
license.workspace = true
publish = false
repository.workspace = true
description.workspace = true

[lib]
doctest = true

[dependencies]
rzstd_foundation.workspace = true
rzstd_fse.workspace = true
rzstd_huff0.workspace = true
rzstd_io.workspace = true

miette.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
xxhash-rust = { version = "0.8.15", features = ["xxh64"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
zstd = "0.13"
ruzstd = "0.8.2"

[[bench]]
name = "decode_bench"
harness = false
